# leetcuda

./: .gitignore  CMakeLists.txt  README.md  create.sh  run.sh
src/: 001_vector_add.cu  002_matrix_mul.cu  003_color_invert.cu  004_transpose.cu  005_mat_add.cu  006_convolution.cu  006_sample.cu  007_random.cu  007_reverse_array.cu  008_relu.cu  009_leaky_relu.cu  010_rainbow_table.cu  011_matrix_copy.cu  012_count.cu  013_count_2d.cu  014_sigmoid.cu  015_swiglu.cu  016_clip.cu  017_interleave.cu
